--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,7 @@
         "nesbot/carbon": "^1.37",
         "php-translation/symfony-bundle": "^0.8",
         "phpdocumentor/reflection-docblock": "^4.3",
+        "psr/simple-cache": "^1.0",
         "sensio/framework-extra-bundle": "^5.3",
         "sensiolabs/security-checker": "^5.0",
         "siriusphp/upload": "^2.1",
