Use (local) Source Sans Variable instead of from Google Fonts

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "popper.js": "^1.15.0",
     "register-service-worker": "^1.6.2",
     "simplemde": "^1.11.2",
+    "source-sans-pro": "^2.45.0",
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-scss": "^3.8.0",
     "terser": "^4.0.0",
@@ -76,10 +77,10 @@
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
-    "prettier": "^1.17.1",
+    "prettier": "^1.18.2",
     "regenerator-runtime": "^0.13.2",
     "sass-loader": "^7.1.0",
-    "stylelint": "^10.0.1",
+    "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
     "vue-jest": "^3.0.4",
     "vue-loader": "^15.7.0",
