Add Font Awesome locally.

--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "popper.js": "^1.15.0",
     "register-service-worker": "^1.6.2",
     "simplemde": "^1.11.2",
-    "source-sans-pro": "^2.45.0",
     "stylelint-config-recommended-scss": "^3.3.0",
     "stylelint-scss": "^3.8.0",
     "terser": "^4.0.0",
@@ -60,6 +59,7 @@
     "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
+    "@fortawesome/fontawesome-free": "^5.9.0",
     "@symfony/webpack-encore": "^0.27.0",
     "@vue/test-utils": "^1.0.0-beta.29",
     "ajv-keywords": "^3.4.0",
@@ -80,6 +80,7 @@
     "prettier": "^1.18.2",
     "regenerator-runtime": "^0.13.2",
     "sass-loader": "^7.1.0",
+    "source-sans-pro": "^2.45.0",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
     "vue-jest": "^3.0.4",
