Exclude api-platform 2.4.4, see #470

--- a/composer.json
+++ b/composer.json
@@ -60,7 +60,8 @@
         "white-october/pagerfanta-bundle": "^1.2"
     },
     "conflict": {
-        "symfony/symfony": "*"
+        "symfony/symfony": "*",
+        "api-platform/core": "2.4.4"
     },
     "require-dev": {
         "ext-curl": "*",
