--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -85,7 +85,7 @@ pages:
         content:
             type: html
             height: 300px
-            allowtwig: true
+            allow_twig: true
         checkbox:
             type: checkbox
             label: "This is a checkbox"
