Add customized graphql main classes, fix graphql builder

--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -6,6 +6,9 @@ parameters:
     env(DATABASE_URL): ''
 
 doctrine:
+    dbal:
+        types:
+            field_value: Bolt\Doctrine\Mapping\FieldValueType
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
