Working on user edit screens

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,4 +1,9 @@
 security:
+    role_hierarchy:
+        ROLE_ADMIN: [ROLE_EDITOR, ROLE_USER]
+        ROLE_EDITOR: [ROLE_USER]
+        ROLE_USER: []
+
     encoders:
         Bolt\Entity\User: bcrypt
 
