--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootbox": "^5.1.3",
     "bootstrap": "^4.3.1",
     "codemirror": "^5.48.0",
+    "dropzone": "^5.5.1",
     "flagpack": "^1.0.3",
     "jquery": "^3.4.1",
     "luxon": "^1.16.0",
