Fixing some deprecations

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -5,7 +5,7 @@ security:
         ROLE_USER: []
 
     encoders:
-        Bolt\Entity\User: bcrypt
+        Bolt\Entity\User: auto
 
     providers:
         database_users:
