No imageFetchFixture for tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,7 @@ before_script:
   # prepare web server for e2e tests
   - ./bin/console doctrine:database:create
   - ./bin/console doctrine:schema:create
-  - ./bin/console doctrine:fixtures:load -n
+  - ./bin/console doctrine:fixtures:load --group=without-images -n
   - ./bin/console server:start 127.0.0.1:8088
   # test if web server works
   - sleep 3
