--- a/composer.json
+++ b/composer.json
@@ -11,10 +11,12 @@
         "api-platform/core": "^2.4",
         "bolt/common": "^2.0.2",
         "cocur/slugify": "^3.2",
+        "composer/composer": "^1.9",
         "doctrine/annotations": "^1.6",
         "doctrine/doctrine-bundle": "^1.11",
         "doctrine/doctrine-cache-bundle": "^1.3.1",
         "doctrine/orm": "^2.6",
+        "drupol/composer-packages": "^1.0",
         "embed/embed": "^3.3",
         "erusev/parsedown": "^1.7",
         "ezyang/htmlpurifier": "^4.10",
