--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "bolt/bolt",
+    "name": "bolt/core",
     "type": "library",
-    "description": "Bolt 4 skeleton / prototype",
+    "description": "Bolt 4 core",
     "license": "MIT",
     "require": {
         "php": ">=7.1.3",
@@ -9,7 +9,6 @@
         "ext-mbstring": "*",
         "ext-pdo": "*",
         "api-platform/core": "^2.4",
-        "bobdenotter/weatherwidget": "dev-master",
         "bolt/common": "^2.0.2",
         "cocur/slugify": "^3.2",
         "composer/composer": "^1.9",
