--- a/package.json
+++ b/package.json
@@ -27,29 +27,31 @@
     "url": "git://github.com/bolt/four.git"
   },
   "dependencies": {
-    "@vue/cli-service": "^3.9.3",
+    "@vue/cli-service": "^3.10.0",
     "axios": "^0.19.0",
     "baguettebox.js": "^1.11.0",
-    "bootbox": "^5.2.0",
+    "bootbox": "^5.3.0",
     "bootstrap": "^4.3.1",
     "codemirror": "^5.48.2",
     "dropzone": "^5.5.1",
     "flagpack": "^1.0.3",
     "jquery": "^3.4.1",
-    "luxon": "^1.17.1",
+    "luxon": "^1.17.2",
     "no-scroll": "^2.1.1",
+    "npm-check-updates": "^3.1.20",
     "popper.js": "^1.15.0",
     "register-service-worker": "^1.6.2",
     "selectize": "^0.12.6",
     "simplemde": "^1.11.2",
     "stylelint-config-recommended-scss": "^3.3.0",
-    "stylelint-scss": "^3.9.2",
-    "terser": "^4.1.2",
+    "stylelint-scss": "^3.9.3",
+    "terser": "^4.1.3",
     "tinycolor2": "^1.4.1",
     "vue": "^2.6.10",
     "vue-flatpickr-component": "^8.1.2",
+    "vue-i18n": "^8.12.0",
     "vue-multiselect": "^2.1.6",
-    "vue-simplemde": "^0.5.2",
+    "vue-simplemde": "^1.0.0",
     "vue-trumbowyg": "^3.4.2",
     "vuedraggable": "^2.23.0",
     "vuex": "^3.1.1"
@@ -60,7 +62,7 @@
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
-    "@fortawesome/fontawesome-free": "^5.9.0",
+    "@fortawesome/fontawesome-free": "^5.10.1",
     "@symfony/webpack-encore": "^0.27.0",
     "@vue/test-utils": "^1.0.0-beta.29",
     "ajv-keywords": "^3.4.1",
@@ -88,6 +90,7 @@
     "vue-loader": "^15.7.1",
     "vue-router": "^3.0.7",
     "vue-template-compiler": "^2.6.10",
+    "webpack-cli": "^3.3.6",
     "webpackbar": "^3.2.0",
     "workbox-webpack-plugin": "^4.3.1"
   },
