--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "bootbox": "^5.2.0",
     "bootstrap": "^4.3.1",
     "codemirror": "^5.48.2",
-    "consola": "^2.9.0",
+    "consola": "2.9.0",
     "dropzone": "^5.5.1",
     "flagpack": "^1.0.3",
     "jquery": "^3.4.1",
