--- a/config/bolt/config_local.yaml
+++ b/config/bolt/config_local.yaml
@@ -4,7 +4,7 @@ database:
     username: root
     password: ''
 
-sitename: Bolt Four Website
+sitename: Bolt Core Git Clone
 
 debug: true
 debug_show_loggedoff: false
