--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -5,7 +5,9 @@ twig:
         - 'form/layout.twig'
         - 'form/fields.twig'
     paths:
-        '%kernel.project_dir%/public/theme/%bolt.theme%': ''
+        # Since the name of the theme folder is dynamic, we shouldn't set it here, but dynamically
+        # See TwigAwareController::setTwigLoader()
+        # '%kernel.project_dir%/public/theme/%bolt.theme%': ''
         '%kernel.project_dir%/templates/': 'bolt'
     globals:
         'config': '@Bolt\Configuration\Config'
