Working on some more tiny tweaks

--- a/config/bolt/config.yaml
+++ b/config/bolt/config.yaml
@@ -31,7 +31,7 @@ theme: skeleton
 #
 # This can be done as [nl_NL, Dutch_Netherlands] when specifying multiple
 # locales, ensure the first is a standard locale.
-locale: nl_NL
+locale: en
 
 # Set the timezone to be used on the website. For a list of valid timezone
 # settings, see: http://php.net/manual/en/timezones.php
