--- a/config/routes/api_platform.yaml
+++ b/config/routes/api_platform.yaml
@@ -2,3 +2,7 @@ api_platform:
     resource: .
     type: api_platform
     prefix: /api
+
+api_entrypoint:
+    path: '%bolt.backend_url%/api'
+    controller: api_platform.swagger.action.ui
