Adding EsLint check to Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,8 @@ script:
   # this checks that the source code follows the Bolt Code Syntax rules
   - ./vendor/bin/ecs check src
   - ./vendor/bin/phpstan analyse -c phpstan.neon src
+  # run EsLint on Javascript files
+  - npm run lint
   # this checks that the YAML config files contain no syntax errors
   - ./bin/console lint:yaml config
   # this checks that the Twig template files contain no syntax errors
