--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "miljar/php-exif": "^0.6.4",
         "nelmio/cors-bundle": "^1.5",
         "nesbot/carbon": "^1.38 || ^2.19",
+        "peterkahl/country-code-to-emoji-flag": "^0.9.1",
         "php-translation/symfony-bundle": "^0.8",
         "phpdocumentor/reflection-docblock": "^4.3",
         "psr/simple-cache": "^1.0",
