--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -41,7 +41,7 @@ homepage:
             group: meta
     viewless: true
     taxonomy: [ categories, tags, foobars ]
-    locales: ['en', 'nl', 'pt_BR', 'es', 'hu']
+    locales: ['en', 'nl', 'ja', 'nb']
     singleton: true
     default_status: published
     icon_many: "fa:home"
