--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -6,6 +6,17 @@ parameters:
     env(DATABASE_URL): ''
 
 doctrine:
+    dbal:
+        # For SQLite
+        # driver: 'pdo_sqlite'
+        # server_version: '3.15'
+
+        # For MySQL
+        # charset: utf8mb4
+        # server_version: 5.7
+        charset: utf8mb4
+        url: '%env(resolve:DATABASE_URL)%'
+
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
