--- a/config/bolt/config.yaml
+++ b/config/bolt/config.yaml
@@ -1,18 +1,11 @@
-# Database setup. The driver can be either sqlite, mysql or postgres.
-#
-# For SQLite, only the databasename is required. However, MySQL and PostgreSQL
-# also require username, password, and optionally host ( and port ) if the database
-# server is not on the same host as the web server.
-#
-# If youre trying out Bolt, just keep it set to SQLite for now.
-database:
-    url: '%env(resolve:DATABASE_URL)%'
+# Note: Database setup is best done in ENV variables. See the file `.env`
+# in the project root. 
+
 
 # The name of the website
 sitename: A sample site in CONFIG
 payoff: The amazing payoff goes here
 
-# note: ENV vars do not get parsed, yet!
 secret: '%env(APP_SECRET)%'
 
 # The theme to use.
@@ -21,8 +14,9 @@ secret: '%env(APP_SECRET)%'
 # in next releases. If you wish to modify a default theme, copy its folder, and
 # change the name here accordingly.
 theme: skeleton
+#theme: bolt-tufte-theme
 
-# The locale thatll be used by the application. If no locale is set the
+# The locale that'll be used by the application. If no locale is set the
 # fallback locale is en_GB. For available options, see:
 # https://docs.bolt.cm/other/locales
 #
@@ -136,68 +130,6 @@ search_results_records: 10
 # for each content type.
 records_per_page: 8
 
-# Settings for caching in parts of Bolt.
-# - config:        Caches the parsed .yml files from /app/config. Its updated
-#                  immediately when one of the files changes on disk. There
-#                  should be no good reason to turn this off.
-#
-# - templates:     Caches rendered templates.
-#
-# - request:       Caches rendered pages in the configured HTTP reverse proxy
-#                  cache, on GET & HEAD requests.
-#                  By default this is handled by Syfmony HTTP Cache.
-#
-# - duration:      The duration (in minutes) for the templates and request
-#                  options. default is 10 minutes. Note that the duration is set
-#                  on storing the cache. By lowering this value you will not
-#                  invalidate currently cached items.
-#
-# - authenticated: Cache templates and request for logged-on users. In most
-#                  cases you should *NOT* enable this, because it will cause
-#                  side-effects if the website shows different content to
-#                  authenticated users.
-#
-# - thumbnails:    Caches thumbnail generation.
-#
-# - translations:  Caches translation files. It is recommend to leave this
-#                  enabled. Only if you develop extensions and work with
-#                  translation files you should turn this off.
-caching:
-    config: true
-    templates: true
-    request: false
-    duration: 10
-    authenticated: false
-
-# Default settings for thumbnails.
-#
-# Quality should be between 0 (horrible, small file) and 100 (best, huge file).
-#
-# cropping:           One of either crop, fit, borders, resize.
-# default_thumbnail:  The default size of images, when using
-#                     {{ record.image|thumbnail() }}
-# default_image:      The default size of images, when using
-#                     {{ record.image|image() }}
-# allow_upscale:      Determines whether small images will be enlarged to fit
-#                     the requested dimensions.
-# browser_cache_time: Sets the amount of seconds that the browser will cache
-#                     images for. Set it to activate browser caching.
-#
-# Note: If you change these values, you might need to clear the cache before
-#       they show up.
-thumbnails:
-    default_thumbnail: [ 160, 120 ]
-    default_image: [ 1000, 750 ]
-    quality: 80
-    cropping: crop
-    notfound_image: bolt_assets://img/default_notfound.png
-    error_image: bolt_assets://img/default_error.png
-    save_files: false
-    allow_upscale: false
-    exif_orientation: true
-    only_aliases: false
-#    browser_cache_time: 2592000
-
 # Define the HTML tags and attributes that are allowed in cleaned HTML. This
 # is used for sanitizing HTML, to make sure there are no undesirable elements
 # left in the content that is shown to users. For example, tags like `<script>`
@@ -208,15 +140,6 @@ thumbnails:
 htmlcleaner:
     allowed_tags: [ div, span, p, br, hr, s, u, strong, em, i, b, li, ul, ol, mark, blockquote, pre, code, tt, h1, h2, h3, h4, h5, h6, dd, dl, dt, table, tbody, thead, tfoot, th, td, tr, a, img, address, abbr, iframe, caption, sub, super, figure, figcaption ]
     allowed_attributes: [ id, class, style, name, value, href, src, alt, title, width, height, frameborder, allowfullscreen, scrolling, target, colspan, rowspan ]
-
-# Uploaded file handling
-#
-# You can change the pattern match and replacement on uploaded files and if the
-# resulting filename should be transformed to lower case.
-# upload:
-#     pattern: [^A-Za-z0-9\.]+
-#     replacement: -
-#     lowercase: true
 
 # Define the file types (extensions to be exact) that are acceptable for upload
 # in either file fields or through the files screen.
@@ -244,17 +167,6 @@ accept_media_types: [ gif, jpg, jpeg, png, svg, pdf, mp3, tiff ]
 #     name: SuperCMS
 #     path: /admin
 #     provided_by: [ supercool@example.org, "Supercool Webdesign Co." ]
-
-# Show the debug nut in the lower right corner for logged-in user. By default,
-# the debugbar is only shown to logged-in users. Use the debug_show_loggedoff
-# option to show it to all users. You probably do not want to use this in a
-# production environment.
-debug: true
-debug_show_loggedoff: false
-
-# Use strict variables. This will make Bolt complain if you use {{ foo }},
-# when foo doesnt exist.
-#strict_variables: false
 
 # There are several options for giving editors more options to insert images,
 # video, etc in the WYSIWYG areas. But, as you give them more options, that
