--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -7,15 +7,16 @@ parameters:
 
 doctrine:
     dbal:
+        charset: utf8mb4
+        url: '%env(resolve:DATABASE_URL)%'
+
         # For SQLite
         # driver: 'pdo_sqlite'
         # server_version: '3.15'
 
         # For MySQL
-        # charset: utf8mb4
-        # server_version: 5.7
-        charset: utf8mb4
-        url: '%env(resolve:DATABASE_URL)%'
+        # driver: 'pdo_mysql'
+        # server_version: 5.7	
 
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
