--- a/.travis.yml
+++ b/.travis.yml
@@ -48,8 +48,8 @@ before_script:
   - ./bin/console doctrine:fixtures:load --group=without-images -n
   - ./bin/console server:start 127.0.0.1:8088
   # test if web server works
-  - sleep 3
-  - wget "http://127.0.0.1:8088/bolt/login"
+#  - sleep 3
+#  - wget "http://127.0.0.1:8088/bolt/login"
 
 script:
   # this checks that the source code follows the Bolt Code Syntax rules
