--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "vue-simplemde": "^1.0.0",
     "vue-trumbowyg": "^3.4.2",
     "vuedraggable": "^2.23.0",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
