--- a/config/services.yaml
+++ b/config/services.yaml
@@ -47,16 +47,16 @@ services:
     Doctrine\ORM\Query\Expr: ~
 
     # Needed for SetContent from bolt/core
-    Bolt\Storage\Query\Query:
+    Bolt\Storage\Query:
         calls:
             -
                 method: addScope
-                arguments: [ 'frontend', '@Bolt\Storage\Query\FrontendQueryScope' ]
-    Bolt\Storage\Query\ContentQueryParser:
+                arguments: [ 'frontend', '@Bolt\Storage\FrontendQueryScope' ]
+    Bolt\Storage\ContentQueryParser:
         calls:
             -
                 method: addService
-                arguments: [ 'select', '@Bolt\Storage\Query\SelectQuery' ]
+                arguments: [ 'select', '@Bolt\Storage\SelectQuery' ]
 
     Bolt\Doctrine\TablePrefix:
         arguments: [ "%bolt.table_prefix%" ]
