Fix setcontent when trying to order on the same non-standard column twice

--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -292,6 +292,7 @@ blocks:
     searchable: false
     icon_many: "fa:cubes"
     icon_one: "fa:cube"
+    sort: title
 
 # This contenttype is here to use for (automated) tests.
 tests:
