--- a/behat.yml
+++ b/behat.yml
@@ -24,11 +24,13 @@ default:
       screenshot: false
 
     Behat\MinkExtension:
+      browser_name: chrome
       base_url: 'http://127.0.0.1:8088/'
       goutte: ~
+      selenium2: ~
       sessions:
         default:
-          goutte: ~
+          selenium2: ~
 
     Behatch\Extension: ~
 
@@ -39,4 +41,4 @@ default:
       contexts:
         - Behatch\Context\JsonContext
         - Context\FeatureContext
-      paths: [ "%paths.base%/tests/api" ]
+      paths: [ "%paths.base%/tests/api"]
