--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,11 @@
         "ext-pdo": "*",
         "antishov/doctrine-extensions-bundle": "^1.4",
         "api-platform/core": "^2.4",
+        "behat/mink-selenium2-driver": "^1.3",
         "bolt/common": "^2.1.0",
         "cocur/slugify": "^3.2",
         "composer/composer": "^1.9",
+        "dmore/chrome-mink-driver": "^2.7",
         "doctrine/annotations": "^1.7",
         "doctrine/doctrine-bundle": "^1.11",
         "doctrine/doctrine-cache-bundle": "^1.3.1",
@@ -71,8 +73,10 @@
         "acmecorp/reference-extension": "^1.0",
         "behat/behat": "^3.5",
         "behat/mink": "dev-master@dev",
+        "behat/mink-browserkit-driver": "^1.3",
         "behat/mink-extension": "^2.3",
         "behat/mink-goutte-driver": "^1.2",
+        "behat/symfony2-extension": "^2.1",
         "behatch/contexts": "^3.2",
         "bobdenotter/weatherwidget": "^1.0",
         "bolt/newswidget": "^1.0",
