Tiny fixes for the listing and edit screens

--- a/config/bolt/contenttypes.yaml
+++ b/config/bolt/contenttypes.yaml
@@ -94,6 +94,7 @@ pages:
             filter: '*.twig'
     taxonomy: [ groups ]
     listing_records: 6
+    locales: ['en', 'nl', 'ja', 'nb']
 
 # Entries can be used for things like 'news' or 'blogpostings'. They have a
 # 'teaser', which can be used for a short blurb on listing-pages, allowing
