--- a/behat.yml
+++ b/behat.yml
@@ -34,7 +34,12 @@ default:
             capabilities:
               extra_capabilities:
                 chromeOptions:
+                  args:
+                    - "--headless"
+                    - "--disable-gpu"
+                    - "window-size=1920,1080"
                   w3c: false
+
 
     Behatch\Extension: ~
 
