--- a/.travis.yml
+++ b/.travis.yml
@@ -77,6 +77,7 @@ script:
   # run API tests
   - ./vendor/bin/behat
   # run e2e tests with Kakunin
-  - cd tests/e2e && npm run kakunin && cd ../..
+  #- cd tests/e2e && npm run kakunin && cd ../..
+  - ./run_behat_tests.sh && make behat-js
 
 
