behat.yml chrome args fix

--- a/behat.yml
+++ b/behat.yml
@@ -37,7 +37,7 @@ default:
                   args:
                     - "--headless"
                     - "--disable-gpu"
-                    - "window-size=1920,1080"
+                    - "--window-size=1920,1080"
                   w3c: false
 
 
