Cleanup. AccessDeniedHandler was not needed, custom user checker was not working

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,7 @@ security:
         main:
             pattern: ^/
             anonymous: true
+            user_checker: Bolt\Security\UserChecker
 
             guard:
                 authenticators:
@@ -33,8 +34,6 @@ security:
             remember_me:
                 secret: '%kernel.secret%'
                 lifetime: 2592000
-
-            access_denied_handler: Bolt\Security\AccessDeniedHandler
 
     access_control:
         # this is a catch-all for the admin area
