--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,10 @@ npm-debug.log
 yarn-error.log
 webpack_stats.json
 
+### Behat / Front-end testing files
+bin/chromedriver
+bin/selenium-server-standalone*.jar
+
 ### File-system cruft and temporary files
 __*
 ._*
