--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -11,3 +11,6 @@ twig:
         '%kernel.project_dir%/templates/': 'bolt'
     globals:
         'config': '@Bolt\Configuration\Config'
+
+    # Override Symfony's error pages (so we can show custom 404's)
+    exception_controller: Bolt\Controller\ExceptionController::showAction
