--- a/config/bolt/config.yaml
+++ b/config/bolt/config.yaml
@@ -84,7 +84,7 @@ homepage_template: index.twig
 # identifiers for records, which will be tried until a match is found.
 #
 # Note: The record specified in this parameter must be set to published.
-notfound: [ not-found.twig, block/404-not-found ]
+notfound: [ blocks/404-not-found, 'helpers/page_404.html.twig' ]
 
 # The default template and amount of records to use for listing-pages on the
 # site.
