--- a/config/services.yaml
+++ b/config/services.yaml
@@ -72,3 +72,10 @@ services:
     Bolt\Menu\BackendMenuBuilderInterface: '@Bolt\Menu\BackendMenuBuilder'
     Bolt\Menu\FrontendMenuBuilder: ~
     Bolt\Menu\FrontendMenuBuilderInterface: '@Bolt\Menu\FrontendMenuBuilder'
+
+    # Override Symfony's error pages (so we can show custom 404's)
+    Bolt\Controller\ExceptionController:
+        public: true
+        arguments:
+            $debug: '%kernel.debug%'
+
