--- a/.gitignore
+++ b/.gitignore
@@ -68,7 +68,9 @@ appveyor.yml
 .php-version
 
 ###> symfony/framework-bundle ###
-/.env
+/.env.local
+/.env.local.php
+/.env.*.local
 /public/bundles/
 /vendor/
 ###< symfony/framework-bundle ###
