Run composer sync-recipes --force

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,7 @@ appveyor.yml
 /.env.local.php
 /.env.*.local
 /public/bundles/
+/var/
 /vendor/
 ###< symfony/framework-bundle ###
 
@@ -91,4 +92,16 @@ appveyor.yml
 
 ###> phpunit/phpunit ###
 /phpunit.xml
+.phpunit.result.cache
 ###< phpunit/phpunit ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
+
+###> behat/symfony2-extension ###
+behat.yml
+###< behat/symfony2-extension ###
