--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,40 +1,3 @@
-# This file defines routes for the frontend and control panel of your Bolt
-# website. Check below for examples, or read the documentation at
-# https://docs.bolt.cm/configuration/routing
-
-# ------------------------------------------------------------------------------
-# Place your own routes here, that have a HIGHER priority than the default routes.
-
-
-
-# ------------------------------------------------------------------------------
-# These are the routes defining the default behaviour of Bolt's frontend.
-# Changing these might give unexpected results or even break your website. If
-# possible, only add NEW routes above or below these.
-frontend:
-  resource: '../src/Controller/Frontend/'
-  prefix: /
-  type: annotation
-
-# ------------------------------------------------------------------------------
-# Place your own routes here, that have a LOWER priority than the default routes.
-
-
-
-# ------------------------------------------------------------------------------
-# Examples:
-
-#contentlisting:
-#  path: /{contenttypeslug}
-#  defaults:
-#    _controller: Bolt\Controller\Frontend\Controller::contentListing
-#  requirements:
-#    contenttypeslug: '%bolt.requirement.pluralcontenttypes%'
-
-# ------------------------------------------------------------------------------
-# last of all, try to find content only by slug (SEO routes) before throwing 404
-content_seo:
-   path: /{slugOrId}
-   methods: [GET]
-   defaults:
-     _controller: Bolt\Controller\Frontend\DetailController::record
+#index:
+#    path: /
+#    controller: App\Controller\DefaultController::index
