--- a/.env
+++ b/.env
@@ -15,45 +15,19 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_DEBUG=1
-APP_SECRET=67d829bf61dc5f87a73fd814e2c9f629
+APP_SECRET=2fa232d632aa8ea89cefc3a15a221b99
+#TRUSTED_PROXIES=127.0.0.1,127.0.0.2
+#TRUSTED_HOSTS='^localhost|example\.com$'
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
-# Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# For a sqlite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
-# Set "serverVersion" to your server version to avoid edge-case exceptions and extra database calls
-
-# SQLite
-DATABASE_URL=sqlite:///%kernel.project_dir%/var/data/bolt.sqlite
-
-# MySQL (with docker)
-#DATABASE_HOST=database
-#DATABASE_USER=bolt_db_user
-#DATABASE_PASSWORD=bolt_db_password
-#DATABASE_NAME=bolt
-#DATABASE_URL=mysql://bolt_db_user:bolt_db_password@database:3306/bolt
-
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
+# For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11"
+# IMPORTANT: You MUST also configure your db driver and server_version in config/packages/doctrine.yaml
+DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
-
-###> symfony/swiftmailer-bundle ###
-# For Gmail as a transport, use: "gmail://username:password@localhost"
-# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
-# Delivery is disabled by default via "null://localhost"
-MAILER_URL=null://localhost
-###< symfony/swiftmailer-bundle ###
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN=^https?://localhost(:[0-9]+)?$
 ###< nelmio/cors-bundle ###
-
-# blackfire access tokens for performance measurement
-BLACKFIRE_CLIENT_ID=
-BLACKFIRE_CLIENT_TOKEN=
-BLACKFIRE_SERVER_ID=
-BLACKFIRE_SERVER_TOKEN=
-BLACKFIRE_LOG_LEVEL=0
-
-###> php-translation/loco-adapter ###
-LOCO_PROJECT_API_KEY=
-###< php-translation/loco-adapter ###
