--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,30 +1,16 @@
 framework:
     secret: '%env(APP_SECRET)%'
-    csrf_protection: { enabled: true }
-    http_method_override: true
-    trusted_hosts: ~
+    #csrf_protection: true
+    #http_method_override: true
+
+    # Enables session support. Note that the session will ONLY be started if you read or write from it.
+    # Remove or comment this section to explicitly disable session support.
     session:
-        # With this config, PHP's native session handling is used
-        handler_id: ~
-    # When using the HTTP Cache, ESI allows to render page fragments separately
-    # and with different cache configurations for each fragment
-    # https://symfony.com/doc/current/book/http_cache.html#edge-side-includes
-    esi: { enabled: true }
-    fragments: { enabled: true }
+        handler_id: null
+        cookie_secure: auto
+        cookie_samesite: lax
+
+    #esi: true
+    #fragments: true
     php_errors:
         log: true
-    assets:
-        json_manifest_path: '%kernel.project_dir%/public/assets/manifest.json'
-    cache:
-        # this value is used as part of the "namespace" generated for the cache item keys
-        # to avoid collisions when multiple apps share the same cache backend (e.g. a Redis server)
-        # See https://symfony.com/doc/current/reference/configuration/framework.html#prefix-seed
-        prefix_seed: bolt
-    # The 'ide' option turns all of the file paths in an exception page
-    # into clickable links that open the given file using your favorite IDE.
-    # When 'ide' is set to null the file is opened in your web browser.
-    # See https://symfony.com/doc/current/reference/configuration/framework.html#ide
-    ide: phpstorm
-    validation:
-        email_validation_mode: 'html5'
-        enable_annotations: true
