--- a/config/packages/prod/monolog.yaml
+++ b/config/packages/prod/monolog.yaml
@@ -4,12 +4,20 @@ monolog:
             type: fingers_crossed
             action_level: error
             handler: nested
-            excluded_http_codes: [404]
+            excluded_http_codes: [404, 405]
         nested:
             type: stream
-            path: '%kernel.logs_dir%/%kernel.environment%.log'
+            path: "%kernel.logs_dir%/%kernel.environment%.log"
             level: debug
         console:
-            type:   console
+            type: console
             process_psr_3_messages: false
-            channels: ['!event', '!doctrine']
+            channels: ["!event", "!doctrine"]
+        deprecation:
+            type: stream
+            path: "%kernel.logs_dir%/%kernel.environment%.deprecations.log"
+        deprecation_filter:
+            type: filter
+            handler: deprecation
+            max_level: info
+            channels: ["php"]
