--- a/config/packages/translation.yaml
+++ b/config/packages/translation.yaml
@@ -1,17 +1,6 @@
 framework:
-    default_locale: '%locale%'
+    default_locale: en
     translator:
+        default_path: '%kernel.project_dir%/translations'
         fallbacks:
-            - 'en'
-
-# php_translation
-translation:
-    webui:
-        enabled: true
-    locales: ['en', 'nl', 'es', 'fr', 'de', 'pl', 'it', 'hu', 'pt_BR', 'is', 'jp', 'nb', 'dk', 'pl']
-    edit_in_place:
-        enabled: false
-    configs:
-        bolt:
-            dirs: ["%kernel.project_dir%/templates", "%kernel.project_dir%/src"]
-            output_dir: "%kernel.project_dir%/translations"
+            - en
