--- a/package.json
+++ b/package.json
@@ -1,127 +1,16 @@
 {
-  "name": "bolt",
-  "version": "4.0.0-beta.2",
-  "homepage": "https://boltcms.io",
-  "author": "Bob den Otter <bob@twokings.nl> (https://boltcms.io)",
-  "license": "MIT",
-  "description": "Bolt 4 npm/javascript packages",
-  "keywords": [
-    "bolt",
-    "cms",
-    "php",
-    "symfony",
-    "vue",
-    "content",
-    "management",
-    "system"
-  ],
-  "bugs": {
-    "url": "https://github.com/bolt/four/issues"
-  },
-  "main": "webpack.config.js",
-  "directories": {
-    "tests": "tests"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/bolt/four.git"
-  },
-  "dependencies": {
-    "@vue/cli-service": "^3.12.1",
-    "axios": "^0.19.0",
-    "baguettebox.js": "^1.11.0",
-    "bootbox": "^5.3.2",
-    "bootstrap": "^4.3.1",
-    "codemirror": "^5.49.2",
-    "dropzone": "^5.5.1",
-    "flagpack": "^1.0.4",
-    "jquery": "^3.4.1",
-    "luxon": "^1.21.0",
-    "no-scroll": "^2.1.1",
-    "popper.js": "^1.16.0",
-    "register-service-worker": "^1.6.2",
-    "selectize": "^0.12.6",
-    "simplemde": "^1.11.2",
-    "stylelint-config-recommended-scss": "^4.0.0",
-    "stylelint-scss": "^3.12.1",
-    "terser": "^4.3.9",
-    "tinycolor2": "^1.4.1",
-    "vue": "^2.6.10",
-    "vue-flatpickr-component": "^8.1.5",
-    "vue-multiselect": "^2.1.6",
-    "vue-simplemde": "^1.0.0",
-    "vue-trumbowyg": "^3.4.2",
-    "vuedraggable": "^2.23.2",
-    "vuex": "^3.1.1",
-    "zxcvbn": "^4.4.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-transform-regenerator": "^7.4.5",
-    "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.6.3",
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "@symfony/webpack-encore": "^0.28.0",
-    "@vue/test-utils": "^1.0.0-beta.29",
-    "ajv-keywords": "^3.4.1",
-    "autoprefixer": "^9.7.1",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.3",
-    "babel-jest": "^24.9.0",
-    "eslint": "^6.6.0",
-    "eslint-config-prettier": "^6.5.0",
-    "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^5.2.3",
-    "jest": "^24.9.0",
-    "jest-serializer-vue": "^2.0.2",
-    "node-sass": "^4.13.0",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "prettier": "^1.18.2",
-    "regenerator-runtime": "^0.13.3",
-    "sass-loader": "^7.3.1",
-    "source-sans-pro": "^3.6.0",
-    "stylelint": "^11.1.1",
-    "stylelint-config-standard": "^19.0.0",
-    "vue-jest": "^3.0.5",
-    "vue-loader": "^15.7.2",
-    "vue-router": "^3.1.3",
-    "vue-template-compiler": "^2.6.10",
-    "webpackbar": "^4.0.0",
-    "workbox-webpack-plugin": "^4.3.1"
-  },
-  "scripts": {
-    "start": "encore dev-server --port=8234 --progress --disable-host-check --verbose",
-    "build": "encore production --progress",
-    "postbuild": "rm public/assets/fonts/*.ttf; rm public/assets/fonts/*.eot; rm public/assets/fonts/*.woff; rm public/assets/images/fa-*.svg;",
-    "build:stats": "encore production --progress --json > webpack_stats.json",
-    "serve": "encore dev --watch",
-    "lint": "eslint --ext .js,.vue, assets",
-    "lint-fix": "eslint --ext .js,.vue, assets --fix",
-    "stylelint": "stylelint 'assets/scss'",
-    "stylelint-fix": "stylelint 'assets/scss' --fix",
-    "test": "jest"
-  },
-  "browserslist": [
-    "> 1%"
-  ],
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "vue"
-    ],
-    "transform": {
-      "^.+\\.js$": "<rootDir>/node_modules/babel-jest",
-      ".*\\.(vue)$": "<rootDir>/node_modules/vue-jest"
+    "devDependencies": {
+        "@symfony/webpack-encore": "^0.28.0",
+        "core-js": "^3.0.0",
+        "regenerator-runtime": "^0.13.2",
+        "webpack-notifier": "^1.6.0"
     },
-    "moduleNameMapper": {
-      "^@/(.*)$": "<rootDir>/assets/js/app/$1"
-    },
-    "snapshotSerializers": [
-      "<rootDir>/node_modules/jest-serializer-vue"
-    ]
-  }
+    "license": "UNLICENSED",
+    "private": true,
+    "scripts": {
+        "dev-server": "encore dev-server",
+        "dev": "encore dev",
+        "watch": "encore dev --watch",
+        "build": "encore production --progress"
+    }
 }
