--- a/composer.json
+++ b/composer.json
@@ -59,6 +59,7 @@
         "symfony/yaml": "^4.3",
         "tightenco/collect": "^6.0",
         "twig/extensions": "^1.5",
+        "ua-parser/uap-php": "^3.9",
         "webmozart/path-util": "^2.3",
         "webonyx/graphql-php": "^0.13",
         "white-october/pagerfanta-bundle": "^1.2"
