--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "description": "🧿 Bolt 4 Core",
     "license": "MIT",
     "require": {
-        "php": ">=7.1.3",
+        "php": ">=7.2.9",
         "ext-json": "*",
         "ext-mbstring": "*",
         "ext-pdo": "*",
@@ -14,7 +14,7 @@
         "cocur/slugify": "^3.2",
         "composer/composer": "^1.9",
         "doctrine/annotations": "^1.7",
-        "doctrine/dbal": "2.9.2",
+        "doctrine/dbal": "^2.10.0",
         "doctrine/doctrine-bundle": "^1.11",
         "doctrine/doctrine-cache-bundle": "^1.3.1",
         "doctrine/orm": "^2.6",
@@ -81,7 +81,7 @@
         "bobdenotter/weatherwidget": "^1.0",
         "bolt/newswidget": "^1.0",
         "coduo/php-matcher": "^3.2",
-        "dama/doctrine-test-bundle": "^5.0",
+        "dama/doctrine-test-bundle": "^6.2.0",
         "doctrine/doctrine-fixtures-bundle": "^3.2",
         "lakion/mink-debug-extension": "^1.2",
         "php-http/httplug-pack": "^1.2",
