--- a/package.json
+++ b/package.json
@@ -30,21 +30,22 @@
     "@vue/cli-service": "^3.12.1",
     "axios": "^0.19.0",
     "baguettebox.js": "^1.11.0",
-    "bootbox": "^5.3.2",
+    "bootbox": "^5.3.4",
     "bootstrap": "^4.3.1",
     "codemirror": "^5.49.2",
     "dropzone": "^5.5.1",
     "flagpack": "^1.0.4",
     "jquery": "^3.4.1",
-    "luxon": "^1.21.0",
+    "luxon": "^1.21.1",
     "no-scroll": "^2.1.1",
+    "npm-check-updates": "^3.2.1",
     "popper.js": "^1.16.0",
     "register-service-worker": "^1.6.2",
     "selectize": "^0.12.6",
     "simplemde": "^1.11.2",
     "stylelint-config-recommended-scss": "^4.0.0",
     "stylelint-scss": "^3.12.1",
-    "terser": "^4.3.9",
+    "terser": "^4.4.0",
     "tinycolor2": "^1.4.1",
     "vue": "^2.6.10",
     "vue-flatpickr-component": "^8.1.5",
@@ -52,15 +53,15 @@
     "vue-simplemde": "^1.0.0",
     "vue-trumbowyg": "^3.4.2",
     "vuedraggable": "^2.23.2",
-    "vuex": "^3.1.1",
+    "vuex": "^3.1.2",
     "zxcvbn": "^4.4.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/plugin-transform-regenerator": "^7.4.5",
+    "@babel/core": "^7.7.2",
+    "@babel/plugin-transform-regenerator": "^7.7.0",
     "@babel/plugin-transform-runtime": "^7.6.2",
-    "@babel/polyfill": "^7.6.0",
-    "@babel/preset-env": "^7.6.3",
+    "@babel/polyfill": "^7.7.0",
+    "@babel/preset-env": "^7.7.1",
     "@fortawesome/fontawesome-free": "^5.11.2",
     "@symfony/webpack-encore": "^0.28.0",
     "@vue/test-utils": "^1.0.0-beta.29",
@@ -73,13 +74,13 @@
     "eslint-config-prettier": "^6.5.0",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-vue": "^5.2.3",
+    "eslint-plugin-vue": "^6.0.0",
     "jest": "^24.9.0",
     "jest-serializer-vue": "^2.0.2",
     "node-sass": "^4.13.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
-    "prettier": "^1.18.2",
+    "prettier": "^1.19.1",
     "regenerator-runtime": "^0.13.3",
     "sass-loader": "^7.3.1",
     "source-sans-pro": "^3.6.0",
